@@ -1,5 +1,11 @@
 2002-01-13  Andrew Cagney  <ac131313@redhat.com>
 
+	From Petr Ledvina <ledvinap@kae.zcu.cz>:
+	* signals.c (target_signal_to_name): Verify that SIG is within the
+	bounds of the signals array.
+
+2002-01-13  Andrew Cagney  <ac131313@redhat.com>
+
 	* MAINTAINERS: Remove arm-coff and arm-pe from target list.
 
 2002-01-13  Keith Seitz  <keiths@redhat.com>
